Begin to set up simulator support for the future